{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "c1af3b6c-cc81-4ec9-a45e-d0bbd3900d64",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "25a012ae-db7e-4828-a363-d1126e5afa8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "210394e2-00be-424e-a980-2e8301ccb021",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "b8d44fc6-5957-4c7e-a614-129612a98b20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "971ba25c-c36b-4fa7-ad1e-56a438ed8d38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "17b6ab44-2185-4530-9552-4a74ca3b328b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "401e3d5b-88d8-4d46-92f2-07e244ba7254",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff7478fa-e8d1-4be2-96c0-5d57fae37416",
                    "path": "<Keyboard>/d",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88b2b7a6-a776-40f7-bdb5-52bf58b7cb79",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77cde793-9eb8-4714-b29d-ac64caceb82c",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea7b7245-14bb-42e1-8429-e3fb5ee50645",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bfde31e-9064-4089-aea2-b2ab85810475",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControls",
            "id": "dd42a97e-c688-4479-83b4-99a2dadabdba",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "PassThrough",
                    "id": "05843a08-497d-49ee-adf0-1b2ceca83e79",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef69f369-e84d-441b-b854-4e6752c67618",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}